# omegaosx

./: .dockerignore  .licenserc.yaml  Cargo.toml  Components.toml  IFLOW.md  LICENSE  Makefile  OSDK.toml  OSXDK.toml  README.md  RELEASES.md  cargo-deny.toml  citations.ctf  sync-mdbook-to-gitbook.sh
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.github/workflows/: benchmark_x86.yml  benchmark_x86_tdx.yml  check_branding.yml  publish_api_docs.yml  publish_docker_images.yml  publish_osxdk_and_osxtd.yml  publish_website.yml  test_loongarch.yml  test_omegaosx_vsock.yml  test_riscv.yml  test_x86.yml  test_x86_tdx.yml
.iflow/commands/bmad/tasks/: bmm-daily-standup.md  core-adv-elicit.md  core-index-docs.md  core-validate-workflow.md  core-workflow.md
docs/: PRD.md  architecture.md  deep-dive-comps.md  deep-dive-fs.md  deep-dive-net.md  deep-dive-process.md  deep-dive-vm.md  index.md  product-brief-virtio-gpu.md  review-report.md  ux-virtio-gpu.md  validation-report-ux-gate-check-2025-11-12.md
gitbook/: .gitbook.yaml
gitbook/content/: README.md  SUMMARY.md  desktop-gui-virtualization.md  web3-arl.md
gitbook/content/deep-dives/: deep-dive-comps.md  deep-dive-device.md  deep-dive-ipc.md  deep-dive-net.md  deep-dive-process.md  deep-dive-sched.md  deep-dive-vm.md  index.md
gitbook/content/epics/: product-brief-gitbook-sync.md
gitbook/content/kernel/: README.md  roadmap.md  the-framekernel-architecture.md
gitbook/content/kernel/linux-compatibility/: README.md
gitbook/content/osxtd/: README.md
gitbook/content/overview/: PRD.md  architecture.md  index.md  project-scan-report.json  review-report.md
gitbook/content/to-contribute/: boterinas.md
gitbook/content/ux/: ux-gitbook-sync.md
gitbook/content/workflows/: bmm-workflow-status.yaml  brainstorm-2025-11-12.md
kernel/: Cargo.toml
kernel/comps/block/: Cargo.toml
kernel/comps/console/: Cargo.toml
kernel/comps/framebuffer/: Cargo.toml
kernel/comps/input/: Cargo.toml
kernel/comps/keyboard/: Cargo.toml
kernel/comps/logger/: Cargo.toml
kernel/comps/mlsdisk/: Cargo.toml
kernel/comps/network/: Cargo.toml
kernel/comps/pci/: Cargo.toml
kernel/comps/softirq/: Cargo.toml
kernel/comps/systree/: Cargo.toml
kernel/comps/time/: Cargo.toml
kernel/comps/virtio/: Cargo.toml
kernel/comps/virtio-gpu/: Cargo.toml
kernel/comps/virtio-gpu/src/: lib.rs
kernel/libs/comp-sys/cargo-component/: README.md
kernel/libs/comp-sys/component/: Cargo.toml
kernel/libs/int-to-c-enum/: Cargo.toml
kernel/libs/int-to-c-enum/derive/: Cargo.toml
kernel/libs/omega-bigtcp/: Cargo.toml
kernel/libs/omega-rights/: Cargo.toml
kernel/libs/omega-rights-proc/: Cargo.toml
kernel/libs/omega-rights-proc/src/: lib.rs
kernel/libs/omega-util/: Cargo.toml
kernel/libs/typeflags/src/: lib.rs
kernel/libs/xarray/: Cargo.toml
kernel/src/net/: mod.rs
kernel/src/process/: clone.rs
kernel/src/security/: mod.rs
kernel/src/syscall/: mod.rs
osxdk/: Cargo.toml  README.md
osxdk/tools/docker/: Dockerfile  README.md  run_container.sh
osxtd/: Cargo.toml
osxtd/libs/id-alloc/: Cargo.toml
osxtd/libs/linux-bzimage/boot-params/: Cargo.toml
osxtd/libs/linux-bzimage/builder/: Cargo.toml
osxtd/libs/linux-bzimage/setup/: Cargo.toml
osxtd/libs/ostd-macros/: Cargo.toml
osxtd/libs/ostd-test/: Cargo.toml
test/: Makefile  README.md
test/nix/benchmark/: lmbench.nix
test/nix/syscall/: ltp.nix
test/src/apps/clone3/: clone_parent.c
test/src/apps/mmap/: mmap_and_mremap.c
test/src/apps/namespace/: setns.c
test/src/apps/network/: netlink_route.c  tcp_err.c  tcp_poll.c
test/src/apps/process/: job_control.c  wait4.c
test/src/apps/pthread/: pthread_signal_test.c
test/src/apps/scripts/: shell_cmd.sh
test/src/apps/signal_c/: signal_rflags_df.c  signal_test2.c
test/src/apps/vsock/: vsock_server.c
test/src/benchmark/: README.md  bench_linux_and_aster.sh
tools/docker/: Dockerfile  README.md  run_dev_container.sh
