[package]
name = "omega-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omega-bigtcp = { path = "../../libs/omega-bigtcp" }
omega-softirq = { path = "../softirq" }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
component = { path = "../../libs/comp-sys/component" }
osxtd = { path = "../../../osxtd" }
spin = "0.9.4"

[lints]
workspace = true
