[package]
name = "omega-softirq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omega-util = { path = "../../libs/omega-util" }
osxtd = { path = "../../../osxtd" }
component = { path = "../../libs/comp-sys/component" }
intrusive-collections = "0.9.5"
spin = "0.9.4"

[lints]
workspace = true
